# ER-PSScripter

./: .dockerignore  .env.example  .gitignore  README.md  VERSION  check-prepush.sh  docker-compose.release.yml  docker-compose.yml  setup-dev.sh  version_manager.py
.github/: labeler.yml
backend/: Dockerfile  alembic.ini  debug_routes.py  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3493ac4f128b_add_category_to_snippets.py  39b1f8c83ef4_add_content_hash_to_snippets.py  4f5899da8fb0_add_user_table.py  8871342d7e4b_initial_snippet_table.py  a1447fe9c351_add_system_settings.py  e2e45007c81b_add_project_model.py  fde04c98b945_add_vector_column.py
backend/app/: initial_data.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: backup.py  execute.py  generator.py  login.py  projects.py  scripts.py  settings.py  snippets.py  tags.py  terminal.py  users.py
backend/app/core/: config.py  llm_config.py  security.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/models/: project.py  script_models.py  setting.py  snippet.py  user.py
backend/app/schemas/: analysis.py  backup.py  generator.py  project.py  setting.py  snippet.py  token.py  user.py
backend/app/scripts/: web_overlay.ps1
backend/app/services/: ai_generator.py  ai_service.py  embedding_service.py  script_analyzer.py  vector_store.py
backend/data/: app.db
backend/tests/: test_script_analyzer.py
db/: Dockerfile
docs/: index.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  (+1 more)
scripts/: pull-model.sh
(+34 files in other folders)
