[tool.poetry]
package-mode = false

[project]
name = "er-psscripter-backend"
version = "0.1.0"
license = "AGPL-3.0-only"
description = "AI-driven PowerShell script generator backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "structlog>=24.2.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "tenacity>=8.3.0",
    "openai (>=2.14.0,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "bcrypt (==3.2.2)",
    "email-validator (>=2.3.0,<3.0.0)",
    "pgvector>=0.2.0",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "sentence-transformers (>=2.7.0,<3.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "black>=24.4.0",
    "types-beautifulsoup4>=4.12.0.20240511",
    "types-requests>=2.31.0.20240406",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "SIM", "UP"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
